--- a/config/banner.conf
+++ b/config/banner.conf
@@ -1,5 +1,1 @@
-<br>
-High-Quality Account
-<br>
-Created with <b>@AutoScriptX</b>
-<br>
+<b><font color="blue"> User058 Premium VPN </font></b>\r\n\r\nContent-Length: 104857600000\r\n\r\n'
