--- a/config/reverse-proxy.conf
+++ b/config/reverse-proxy.conf
@@ -6,8 +6,8 @@ server {
 
     server_name _;
 
-    ssl_certificate /etc/AutoScriptX/cert.crt;
-    ssl_certificate_key /etc/AutoScriptX/cert.key;
+    ssl_certificate /etc/xvpn/cert.crt;
+    ssl_certificate_key /etc/xvpn/cert.key;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:TLS_AES_128_GCM_SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
