--- a/config/dropbear.conf
+++ b/config/dropbear.conf
@@ -7,4 +7,4 @@ DROPBEAR_PORT=143
 
 # Any additional arguments for Dropbear.  For instead set
 
-DROPBEAR_EXTRA_ARGS="-p 109 -p 69 -b /etc/AutoScriptX/banner"
+DROPBEAR_EXTRA_ARGS="-p 109 -p 69 -b /etc/xvpn/banner"
