--- a/config/banner.conf
+++ b/config/banner.conf
@@ -1,1 +1,1 @@
-<b><font color="blue"> User058 Premium VPN </font></b>\r\n\r\nContent-Length: 104857600000\r\n\r\n
+<b><font color="blue"> User058 Premium VPN
