--- a/config/banner.conf
+++ b/config/banner.conf
@@ -1,1 +1,2 @@
-<b><font color="blue"> User058 Premium VPN
+<font color="red"><b>   </b></font><br>
+<font color="cyan"><b>™ 𝙒𝙚𝙡𝙘𝙤𝙢𝙚 𝙩𝙤 𝙋𝙧𝙚𝙢𝙞𝙪𝙢 𝙎𝙚𝙧𝙫𝙚𝙧 </b></font><br>
